# GcodeMaster

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/black_arm/share/black_arm/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/btserial_reciever/lib/btserial_reciever/: reciever  translate_quaternion
install/btserial_reciever/share/btserial_reciever/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gcode_executor/lib/gcode_executor/: gcode_reader  gui
install/gcode_executor/share/gcode_executor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocol_arm_moveit2/lib/robocol_arm_moveit2/: main_node
install/robocol_arm_moveit2/share/robocol_arm_moveit2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  (+3 more)
log/: latest_build
src/black_arm/: CMakeLists.txt  package.xml
src/black_arm/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  robocol_arm.ros2_control.xacro  robocol_arm.urdf.xacro
src/black_arm/launch/: gcode.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
src/gcode_executor/: package.xml  setup.cfg  setup.py
src/gcode_executor/gcode_executor/: gcode_reader.py  gui.py
src/robocol_arm_moveit2/: CMakeLists.txt
src/robocol_arm_moveit2/src/: pilz_planning.cpp  plan_2_arm.cpp  traj_extractor.cpp
src/robocol_arm_moveit2/urdf/: robocol_arm.urdf
(+31 files in other folders)
